--- a/.github/workflows/terraform_workflow.yaml
+++ b/.github/workflows/terraform_workflow.yaml
@@ -48,7 +48,7 @@ jobs:
       gh-argocd-initial-password: "${{ secrets.ARGOCD_INITIAL_PASSWORD }}"
       gh-jenkins-initial-password: "${{ secrets.JENKINS_INITIAL_PASSWORD }}"
       gh-keycloak-initial-password: "${{ secrets.KEYCLOAK_INITIAL_PASSWORD }}"
-      gh-mtkc-regred: "${{ secrets.MTKC_REGRED }}"
+      gh-mtkc-regcred: "${{ secrets.MTKC_REGCRED }}"
     with:
       environment: ${{ matrix.environment }}
       path: terraform/env/${{ matrix.environment }}
