--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -24,9 +24,9 @@ on:
       gh-keycloak-initial-password:
         required: false
         description: "Github Secret KEYCLOAK_INITIAL_PASSWORD"
-      gh-mtkc-regred:
+      gh-mtkc-regcred:
         required: false
-        description: "Github Secret MTKC-REGRED"
+        description: "Github Secret MTKC-REGCRED"
 
     inputs:
       environment:
@@ -118,7 +118,7 @@ jobs:
         echo "TF_VAR_sdv_gh_argocd_initial_password=${{ secrets.gh-argocd-initial-password }}" >> $GITHUB_ENV
         echo "TF_VAR_sdv_gh_jenkins_initial_password=${{ secrets.gh-jenkins-initial-password }}" >> $GITHUB_ENV
         echo "TF_VAR_sdv_gh_keycloak_initial_password=${{ secrets.gh-keycloak-initial-password }}" >> $GITHUB_ENV
-        echo "TF_VAR_sdv_gh_mtkc_regcred=${{ secrets.gh-mtkc-regcred }}" >> $GITHUB_ENV
+        echo "TF_VAR_sdv_gh_mtkc_regcred=${{ secrets.gh-mtkc-regcred }}" >> $GITHUB_ENV 
 
         if [[ "${{ secrets.gcp-sa }}" != '' && "${{ secrets.wif-provider }}" != '' ]]; then
           echo "GCP_SA=${{ secrets.gcp-sa }}" >> $GITHUB_ENV;
