TAA-297: Cuttlefish instance templates pipeline
Extract SSH public key from private key:

* Jenkins we extract from Credentials (using withCredentials)
* Local/standalone we extract from k8s secret (based on
  k8s example docs for private key extraction).

Misc:

* Delete stage:
- Include a delete stage allowing admins clean up old versions.
* Blocking builds:
- Added blocking to CF instance template and Docker build pipelines
  to avoid jobs clashing.

Final Dependencies:

* GCP updates (sdv-network/subnet):
- Firewall change to support SSH, ie TCP:22 must be enabled.
* JCasC additions:
- CF Instance Template pipeline CasC
- Build Blocker Plugin.

(cherry picked from commit 254ba63f453a02810dc9497685624503184c9cbf)

--- a/workloads/android/pipelines/aaos_docker_builder/Jenkinsfile
+++ b/workloads/android/pipelines/aaos_docker_builder/Jenkinsfile
@@ -39,9 +39,14 @@ pipeline {
     }
   }
 
+  // Block concurrent builds to avoid clashing.
+  options {
+    buildBlocker (useBuildBlocker: true, blockLevel: 'GLOBAL', scanQueueFor: 'ALL', blockingJobs: '.*Docker.*')
+  }
+
   parameters {
-    string(name: 'IMAGE_TAG', defaultValue: 'latest', description: 'Image tag for the builder image')
-    booleanParam(name: 'NO_PUSH', defaultValue: true, description: 'Build only, do not push to registry')
+    string(name: 'IMAGE_TAG', defaultValue: 'latest', description: '<p>Image tag for the builder image.</p>')
+    booleanParam(name: 'NO_PUSH', defaultValue: true, description: '<p>Build only, do not push to registry.</p>')
   }
 
   environment {
