TAA-201: Add basic trigger
Note: I have one change in review.

--- a/workloads/android/pipelines/aaos_builder/Jenkinsfile
+++ b/workloads/android/pipelines/aaos_builder/Jenkinsfile
@@ -148,8 +148,10 @@ pipeline {
         container(name: 'builder') {
           withCredentials([usernamePassword(credentialsId: 'jenkins-gerrit-http-password', passwordVariable: 'GERRIT_PASSWORD', usernameVariable: 'GERRIT_USERNAME')]) {
             sh '''
+              GERRIT_PASSWORD=$(echo "${GERRIT_PASSWORD}" |tr -d '\n')
+              git config --global credential.helper store
               git config --global url."https://${GERRIT_USERNAME}@${HORIZON_DOMAIN}".insteadOf "https://${HORIZON_DOMAIN}"
-              git config --global credential.url https://"${GERRIT_USERNAME}":"${GERRIT_PASSWORD}"@"${HORIZON_DOMAIN}"
+              echo https://"${GERRIT_USERNAME}":"${GERRIT_PASSWORD}"@"${HORIZON_DOMAIN}" > ~/.git-credentials
 
               AAOS_GERRIT_MANIFEST_URL="${AAOS_GERRIT_MANIFEST_URL}" \
               AAOS_REVISION="${AAOS_REVISION}" \
