--- a/workloads/android/pipelines/gerrit/Jenkinsfile
+++ b/workloads/android/pipelines/gerrit/Jenkinsfile
@@ -81,6 +81,10 @@ pipeline {
     }
   }
 
+  triggers {
+    gerrit customUrl: '', gerritProjects: [[branches: [[compareType: 'PLAIN', pattern: 'android14-qpr1-automotiveos-release']], compareType: 'PLAIN', disableStrictForbiddenFileVerification: false, pattern: 'android/platform/manifest']], serverName: 'Gerrit'
+  }
+
   stages {
     stage ('Git Credentials') {
       steps {
