update dockerfile to execute python script

--- a/gitops/env/dev/horizon-sdv-stage2/configs/mtk-connect/mtk-connect-key/Dockerfile
+++ b/gitops/env/dev/horizon-sdv-stage2/configs/mtk-connect/mtk-connect-key/Dockerfile
@@ -1,7 +1,6 @@
-FROM debian:latest
-ADD configure.sh /root
-ADD secret.json /root
-RUN apt update -y && apt install vim curl skopeo jq -y
-RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-RUN mv /kubectl /usr/local/bin && chmod +x /usr/local/bin/kubectl && chmod +x /root/configure.sh
-CMD ["/bin/sh", "-c", "/root/configure.sh"]
+FROM python:3.9-slim
+WORKDIR /app
+COPY configure-key.py /app/
+COPY requirements.txt /app/
+RUN pip install -r requirements.txt
+CMD ["python", "/app/my_script.py"]
