--- a/gitops/env/dev/horizon-sdv-stage2/configs/mtk-connect/mtk-connect-key/Dockerfile
+++ b/gitops/env/dev/horizon-sdv-stage2/configs/mtk-connect/mtk-connect-key/Dockerfile
@@ -1,6 +1,13 @@
 FROM python:3.9-slim
+
+RUN pip install --upgrade pip
+RUN useradd -m appuser
+USER appuser
+
 WORKDIR /app
-COPY configure-key.py /app/
+
 COPY requirements.txt /app/
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY configure-key.py /app/
 CMD ["python", "/app/my_script.py"]
