small naming fix

--- a/gitops/env/dev/horizon-sdv-stage2/configs/mtk-connect/mtk-connect-key/Dockerfile
+++ b/gitops/env/dev/horizon-sdv-stage2/configs/mtk-connect/mtk-connect-key/Dockerfile
@@ -10,4 +10,4 @@ COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY configure-key.py /app/
-CMD ["python", "/app/my_script.py"]
+CMD ["python", "/app/configure-key.py"]
