sdv_427 jenkins_kubernetes_jcasc init1

--- a/gitops/env/dev/horizon-sdv-stage2/templates/jenkins.yaml
+++ b/gitops/env/dev/horizon-sdv-stage2/templates/jenkins.yaml
@@ -90,6 +90,11 @@ spec:
                 jenkins:
                   systemMessage: Welcome to Horizon SDV server.
                   clouds:
+                    - kubernetes:
+                        containerCap: 20
+                        containerCapStr: "20"
+                        name: "kubernetes"
+                        namespace: "jenkins"
                     - computeEngine:
                         cloudName: cuttlefish-vm-main
                         configurations:
