add sync wave for cron job

--- a/gitops/env/dev/horizon-sdv-stage2/templates/mtk-connect-post.yaml
+++ b/gitops/env/dev/horizon-sdv-stage2/templates/mtk-connect-post.yaml
@@ -85,6 +85,9 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: mtk-connect-api-key-config
+  namespace: mtk-connect
+  annotations:
+    argocd.argoproj.io/sync-wave: "8"
 spec:
   schedule: "0 0 * * *"
   startingDeadlineSeconds: 300
