add service account to cronjob

--- a/gitops/env/dev/horizon-sdv-stage2/templates/mtk-connect-post.yaml
+++ b/gitops/env/dev/horizon-sdv-stage2/templates/mtk-connect-post.yaml
@@ -88,6 +88,7 @@ spec:
     spec:
       template:
         spec:
+          serviceAccountName: mtk-connect-writer-sa
           containers:
             - name: mtk-connect-api-key-config
               args: ["--api-domain", "dev.horizon-sdv.scpmtk.com"]
