update so that cronjob is executed daily at midnight

--- a/gitops/env/dev/horizon-sdv-stage2/templates/mtk-connect-post.yaml
+++ b/gitops/env/dev/horizon-sdv-stage2/templates/mtk-connect-post.yaml
@@ -82,7 +82,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "8"
 spec:
-  schedule: "*/2 * * * *"
+  schedule: "0 0 * * *"
   startingDeadlineSeconds: 300
   jobTemplate:
     spec:
