--- a/gitops/env/dev/horizon-sdv-stage2/apps/mtk-connect/templates/mtk-connect.yaml
+++ b/gitops/env/dev/horizon-sdv-stage2/apps/mtk-connect/templates/mtk-connect.yaml
@@ -200,7 +200,7 @@ spec:
               name: mtk-connect-config
               subPath: config.json
         - name: authenticator
-          image: harbor.scpmtk.com/mtk-connect/mtk-connect-authenticator:v3.5.0
+          image: harbor.scpmtk.com/mtk-connect/mtk-connect-authenticator:v3.5.1
           env:
             - name: authenticator__saml__privateCert
               valueFrom:
@@ -248,7 +248,7 @@ spec:
               memory: 400Mi
           env:
             - name: devices__version
-              value: "v1.7.0"
+              value: "v1.7.0-619847e"
           volumeMounts:
             - mountPath: /usr/src/config/config.json
               name: mtk-connect-config
