--- a/workloads/android/pipelines/builds/gerrit/Jenkinsfile
+++ b/workloads/android/pipelines/builds/gerrit/Jenkinsfile
@@ -76,7 +76,7 @@ pipeline {
   agent none
 
   triggers {
-    gerrit customUrl: '', gerritProjects: [[branches: [[compareType: 'PLAIN', pattern: 'horizon/android-14.0.0_r30']], compareType: 'PLAIN', disableStrictForbiddenFileVerification: false, pattern: 'android/platform/frameworks/native'], [branches: [[compareType: 'PLAIN', pattern: 'horizon/android-14.0.0_r30']], compareType: 'PLAIN', disableStrictForbiddenFileVerification: false, pattern: 'android/platform/packages/services/Car'], [branches: [[compareType: 'PLAIN', pattern: 'horizon/android-14.0.0_r30']], compareType: 'PLAIN', disableStrictForbiddenFileVerification: false, pattern: 'android/platform/platform_testing']], serverName: 'Gerrit', triggerOnEvents: [patchsetCreated()]
+    gerrit customUrl: '', gerritProjects: [[branches: [[compareType: 'ANT', pattern: '**/horizon/*']], compareType: 'PLAIN', disableStrictForbiddenFileVerification: false, pattern: 'android/platform/frameworks/native'], [branches: [[compareType: 'ANT', pattern: '**/horizon/*']], compareType: 'PLAIN', disableStrictForbiddenFileVerification: false, pattern: 'android/platform/packages/services/Car'], [branches: [[compareType: 'ANT', pattern: '**/horizon/*']], compareType: 'PLAIN', disableStrictForbiddenFileVerification: false, pattern: 'android/platform/platform_testing']], serverName: 'Gerrit', triggerOnEvents: [patchsetCreated()]
   }
 
   environment {
@@ -95,6 +95,14 @@ pipeline {
             }
             container(name: 'builder') {
               withCredentials([usernamePassword(credentialsId: env.GERRIT_CREDENTIALS_ID, passwordVariable: 'GERRIT_PASSWORD', usernameVariable: 'GERRIT_USERNAME')]) {
+                script {
+                  env.ANDROID_BUILD_ID = ''
+                  if ( "$GERRIT_BRANCH" =~ "android-14.0.0_r30" ) env.ANDROID_BUILD_ID="ap1a-"
+                  if ( "$GERRIT_BRANCH" =~ "android-14.0.0_r74" ) env.ANDROID_BUILD_ID="ap2a-"
+                  if ( "$GERRIT_BRANCH" =~ "android-15.0.0_r04" ) env.ANDROID_BUILD_ID="ap3a-"
+                  if ( "$GERRIT_BRANCH" =~ "android-15.0.0_r10" ) env.ANDROID_BUILD_ID="ap4a-"
+                }
+
                 sh '''
                   git config --global credential.helper store
                   git config --global url."https://${GERRIT_USERNAME}@${HORIZON_DOMAIN}".insteadOf "https://${HORIZON_DOMAIN}"
@@ -110,7 +118,7 @@ pipeline {
           }
         }
 
-        stage ('Build: sdk_car_x86_64-userdebug') {
+        stage ('Build: sdk_car_x86_64') {
           when { expression { env.GERRIT_CHANGE_ID } }
           steps {
             container(name: 'builder') {
@@ -118,7 +126,7 @@ pipeline {
                 sh '''
                   export AAOS_GERRIT_MANIFEST_URL="https://${HORIZON_DOMAIN}/android/platform/manifest"
                   export AAOS_REVISION="${GERRIT_BRANCH}"
-                  export AAOS_LUNCH_TARGET="sdk_car_x86_64-ap1a-userdebug"
+                  export AAOS_LUNCH_TARGET="sdk_car_x86_64-${ANDROID_BUILD_ID}userdebug"
                   export AAOS_ARTIFACT_ROOT_NAME="${ANDROID_BUILD_BUCKET_ROOT_NAME}"
                   export CLOUD_REGION="${CLOUD_REGION}"
                   export AAOS_BUILD_NUMBER=${BUILD_NUMBER}/${AAOS_LUNCH_TARGET}
@@ -133,7 +141,7 @@ pipeline {
           }
         }
 
-        stage ('Build: aosp_cf_x86_64_auto-userdebug') {
+        stage ('Build: aosp_cf_x86_64_auto') {
           when { expression { env.GERRIT_CHANGE_ID } }
           steps {
             container(name: 'builder') {
@@ -141,7 +149,7 @@ pipeline {
                 sh '''
                   export AAOS_GERRIT_MANIFEST_URL="https://${HORIZON_DOMAIN}/android/platform/manifest"
                   export AAOS_REVISION="${GERRIT_BRANCH}"
-                  export AAOS_LUNCH_TARGET="aosp_cf_x86_64_auto-ap1a-userdebug"
+                  export AAOS_LUNCH_TARGET="aosp_cf_x86_64_auto-${ANDROID_BUILD_ID}userdebug"
                   export AAOS_ARTIFACT_ROOT_NAME="${ANDROID_BUILD_BUCKET_ROOT_NAME}"
                   export CLOUD_REGION="${CLOUD_REGION}"
                   export AAOS_BUILD_NUMBER=${BUILD_NUMBER}/${AAOS_LUNCH_TARGET}
@@ -160,13 +168,13 @@ pipeline {
     stage ('Start Test VM Instance') {
       agent { label 'cuttlefish-vm-main' }
       stages {
-        stage ('Test: aosp_cf_x86_64_auto-userdebug') {
+        stage ('Test: aosp_cf_x86_64_auto') {
           when { expression { env.GERRIT_CHANGE_ID } }
           steps {
             catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
               sh '''
                 BUCKET_FOLDER=$(echo "$JOB_NAME" | tr ' ' '_')
-                export CUTTLEFISH_DOWNLOAD_URL="gs://${CLOUD_PROJECT}-aaos/$BUCKET_FOLDER/$BUILD_NUMBER/aosp_cf_x86_64_auto-ap1a-userdebug"
+                export CUTTLEFISH_DOWNLOAD_URL="gs://${CLOUD_PROJECT}-aaos/$BUCKET_FOLDER/$BUILD_NUMBER/aosp_cf_x86_64_auto-${ANDROID_BUILD_ID}userdebug"
                 export CTS_VERSION=14
                 export CTS_MODULE="CtsHostsideNumberBlockingTestCases"
                 ./workloads/android/pipelines/tests/cvd_launcher/cvd_start_stop.sh --start
