--- a/gitops/env/dev/horizon-sdv-stage2/apps/gerrit/templates/gerrit.yaml
+++ b/gitops/env/dev/horizon-sdv-stage2/apps/gerrit/templates/gerrit.yaml
@@ -79,7 +79,7 @@ spec:
             [core]
               packedGitLimit = 2g
               packedGitWindowSize = 16k
-              packedGitOpenFiles = 1024
+              packedGitOpenFiles = 2048
               streamFileThreshold = 1g
             [index]
               type = LUCENE
@@ -91,7 +91,8 @@ spec:
             [httpd]
               listenUrl = proxy-https://*:8080/
               requestLog = true
-              maxThreads = 25
+              maxThreads = 50
+              postBuffer = 524288000
             [user]
               name = Gerrit Code Review
               email = gerrit@example.com
@@ -104,7 +105,7 @@ spec:
               client-id = "gerrit"
             [pack]
               threads = 2
-              windowMemory = 1g
+              windowMemory = 2g
             [receive]
               timeout = 30m
             [transfer]
