--- a/gitops/env/stage1/argocd-secrets.yaml
+++ b/gitops/env/stage1/argocd-secrets.yaml
@@ -14,13 +14,19 @@ metadata:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: argocd-github-agbg
+  name: argocd-github-creds
   namespace: argocd
   labels:
     argocd.argoproj.io/secret-type: repository
 stringData:
   url: https://github.com/AGBG-ASG/acn-horizon-sdv
   type: git
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: argocd-secret
+  namespace: argocd
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
@@ -41,7 +47,7 @@ spec:
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: argocd-github-agbg
+  name: argocd-github-creds
   namespace: argocd
 spec:
   refreshInterval: 10s
@@ -49,7 +55,7 @@ spec:
     kind: SecretStore
     name: argocd-secret-store
   target:
-    name: argocd-github-agbg
+    name: argocd-github-creds
     creationPolicy: Merge
   data:
     - secretKey: githubAppID
@@ -61,3 +67,21 @@ spec:
     - secretKey: githubAppPrivateKey
       remoteRef:
         key: githubAppPrivateKey
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: argocd-secret
+  namespace: argocd
+spec:
+  refreshInterval: 10s
+  secretStoreRef:
+    kind: SecretStore
+    name: argocd-secret-store
+  target:
+    name: argocd-secret
+    creationPolicy: Merge
+  data:
+    - secretKey: admin.password
+      remoteRef:
+        key: argocdInitialPassword
