gerrit-rwx immediate

--- a/gitops/env/stage2/apps/gerrit/templates/gerrit.yaml
+++ b/gitops/env/stage2/apps/gerrit/templates/gerrit.yaml
@@ -11,7 +11,7 @@ spec:
   storage:
     storageClasses:
       readWriteOnce: standard-rwo
-      readWriteMany: standard-rwx
+      readWriteMany: gerrit-rwx
     sharedStorage:
       externalPVC:
         enabled: true
