--- a/gitops/env/stage2/templates/jenkins-init.yaml
+++ b/gitops/env/stage2/templates/jenkins-init.yaml
@@ -1,3 +1,15 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: jenkins-rwo
+  annotations:
+    argocd.argoproj.io/sync-wave: "5"
+provisioner: pd.csi.storage.gke.io
+volumeBindingMode: Immediate
+reclaimPolicy: Delete
+parameters:
+  type: pd-standard
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -11,7 +23,7 @@ spec:
   resources:
     requests:
       storage: 8Gi
-  storageClassName: standard-rwo
+  storageClassName: jenkins-rwo
   volumeMode: Filesystem
 ---
 apiVersion: v1
