--- a/workloads/android/pipelines/tests/cvd_launcher/Jenkinsfile
+++ b/workloads/android/pipelines/tests/cvd_launcher/Jenkinsfile
@@ -91,9 +91,9 @@ pipeline {
               sh '''
                 CUTTLEFISH_DOWNLOAD_URL="${CUTTLEFISH_DOWNLOAD_URL}" \
                 CUTTLEFISH_MAX_BOOT_TIME="${CUTTLEFISH_MAX_BOOT_TIME}" \
-                NUM_INSTANCES=${NUM_INSTANCES} \
-                VM_CPUS=${VM_CPUS} \
-                VM_MEMORY_MB=${VM_MEMORY_MB} \
+                NUM_INSTANCES="${NUM_INSTANCES}" \
+                VM_CPUS="${VM_CPUS}" \
+                VM_MEMORY_MB="${VM_MEMORY_MB}" \
                 ./workloads/android/pipelines/tests/cvd_launcher/cvd_start_stop.sh --start
               '''
             }
@@ -153,7 +153,7 @@ pipeline {
                   MTK_CONNECT_DOMAIN=${HORIZON_DOMAIN} \
                   MTK_CONNECT_USERNAME=${MTK_CONNECT_USERNAME} \
                   MTK_CONNECT_PASSWORD=${MTK_CONNECT_PASSWORD} \
-                  MTK_CONNECTED_DEVICES=${NUM_INSTANCES} \
+                  MTK_CONNECTED_DEVICES="${NUM_INSTANCES}" \
                   MTK_CONNECT_TESTBENCH="${JOB_NAME}-${BUILD_NUMBER}" \
                   timeout 10m ./workloads/android/pipelines/tests/cvd_launcher/cvd_mtk_connect.sh --stop || true
                   ./workloads/android/pipelines/tests/cvd_launcher/cvd_start_stop.sh --stop || true
